[package]
name = "graphical_playground"
version = "0.2.66"
edition = "2021"
rust-version = "1.84"   #Required versioning to avoid compatibility issues 

[dependencies]
macroquad = { git = "https://github.com/Let-Me-Use-A-Username/unsafe_macroquad.git", branch = "master", features=["audio"] }
macroquad-particles = { git = "https://github.com/Let-Me-Use-A-Username/unsafe_macroquad.git", branch = "master", package = "macroquad-particles" }

# macroquad = { path = "../unsafe_macroquad", features=["audio"] }
# macroquad-particles = { path = "../unsafe_macroquad/particles", package = "macroquad-particles" }
rand = "0.8.5"
async-trait = "0.1.88"
futures = "0.3.31"
mimalloc = "0.1.43"

serde_yaml = "0.9.34"
serde = { version = "1.0", features = ["derive"] }


[profile.release]
lto = "fat"             # Optimization across all crates
opt-level = 3           # Optimization leve, 1=basic, 3=all
panic = "abort"         # Action taken for panic